--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "puppeteer-core": "^24.11.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0",
+    "next": "^15.3.5",
     "ws": "^8.18.3"
   }
 }
