--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
-{
+{"name": "my-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "start": "node server.js"  // Example:  start a Node.js server
+  },
   "dependencies": {
     "mongoose": "^8.16.1",
     "puppeteer-core": "^24.11.2",
