--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.31.0"
+    "whatsapp-web.js": "^1.31.0",
     "mongodb": "^8.0.11",
     "ws": "^8.18.3",
     "qrcode-terminal": "^0.12.0",
