--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^17.0.1",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0",
     "ws": "^8.18.3"
